[Frontend] Fixed CSS that prevented custom scrollbar styling from being applied
open #683
Added :not check around webkit-scrollbar classes to ensure that scrollbars
don't render in touch (mobile) context;

--- a/platform/commonUI/general/res/sass/controls/_controls.scss
+++ b/platform/commonUI/general/res/sass/controls/_controls.scss
@@ -481,27 +481,29 @@ label.checkbox.custom {
 
 /******************************************************** BROWSER ELEMENTS */
 
-::-webkit-scrollbar {
-    @include border-radius(2px);
-    @include box-sizing(border-box);
-    @include box-shadow(inset $scrollbarTrackShdw);
-    background-color: $scrollbarTrackColorBg;
-    height: $scrollbarTrackSize;
-    width: $scrollbarTrackSize;
-}
-
-::-webkit-scrollbar-thumb {
-    $bg: $scrollbarThumbColor;
-    $hc: $scrollbarThumbColorHov;
-    $gr: 5%;
-    @include background-image(linear-gradient(lighten($bg, $gr), $bg 20px));
-    @include border-radius(2px);
-    @include box-sizing(border-box);
-    &:hover {
-        @include background-image(linear-gradient(lighten($hc, $gr), $hc 20px));
+body:not(.touch) {
+    ::-webkit-scrollbar {
+        @include border-radius(2px);
+        @include box-sizing(border-box);
+        @include box-shadow(inset $scrollbarTrackShdw);
+        background-color: $scrollbarTrackColorBg;
+        height: $scrollbarTrackSize;
+        width: $scrollbarTrackSize;
     }
-}
 
-::-webkit-scrollbar-corner {
-    background: $scrollbarTrackColorBg;
+    ::-webkit-scrollbar-thumb {
+        $bg: $scrollbarThumbColor;
+        $hc: $scrollbarThumbColorHov;
+        $gr: 5%;
+        @include background-image(linear-gradient(lighten($bg, $gr), $bg 20px));
+        @include border-radius(2px);
+        @include box-sizing(border-box);
+        &:hover {
+            @include background-image(linear-gradient(lighten($hc, $gr), $hc 20px));
+        }
+    }
+
+    ::-webkit-scrollbar-corner {
+        background: $scrollbarTrackColorBg;
+    }
 }
